--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,79 @@
-/*regole generali*/
+/* BEGIN RESET */
+* {
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* END RESET */
+
+/* General */
 body {
-  color: white;
-  width: 50%;
+  background: url(../img/wallpaper.jpeg);
   margin: auto;
+  width: 50%;
   text-align: left;
-  background-image: url(../img/wallpaper.jpg);
+  color: white;
+  font-size: 30px;
 }
-/*fine regole generali*/
-
-/*regole heading top*/
-.top {
-  padding-top: 1px;
-  padding-bottom: 1px
-  border-bottom: 1px;
+hr {
+  margin-top: 10px;
 }
+/* end general */
 
-.top .logo {
+/* block1 */
+.block1 .icon {
   height: 100px;
   vertical-align: middle;
 }
+/* end block1 */
 
-.top  .text {
-  height:100px;
-  font-size: 25px;
-}
-/*fine regole heading top*/
-
-/*regole bottom*/
-
-.bottom {
-  padding-top: 1px;
-  padding-bottom: 1px;
-}
-
-.bottom .search {
-  height:60px;
-  font-size: 25px;
-  line-height: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-
-.bottom .notifications {
-  height:60px;
-  font-size: 25px;
-  line-height: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.bottom .notifications .number {
+/* block2 */
+.block2 .number{
   background-color: orange;
   display: inline-block;
-  vertical-align: middle;
   text-align: center;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  padding: 10px;
+  padding: 5px;
+  margin: 10px;
 }
-/*fine regole bottom*/
+/* end block2 */
 
-
-/*regole emails*/
-.emails {
-  padding-top: 1px;
-  padding-bottom: 1px;
-  color: black;
+/* boxmail */
+.boxmail {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-
-.content {
-  color: grey;
-}
-
-.emails .unread {
-  border: 1px solid black;
+  .content {
+    color: grey;
+  }
+  .star {
+    font-weight: bold;
+    color: black;
+  }
+.boxmail .unread {
   background-color: lightgrey;
-}
-
-.emails .read {
   border: 1px solid black;
-  background-color: white;
+  font-size: 20px;
+  padding: 2px;
 }
-/*fine regole emails*/
+.boxmail .read {
+  background-color: white;
+  border: 1px solid black;
+  font-size: 20px;
+  padding: 2px;
+}
+/* end boxmail */
 
-/*regole footer*/
-.footer {
+
+/* footer */
+footer {
   text-align: center;
 }
 
-.footer .gmail {
-  font-size: 25px;
+footer .text {
+  font-size: 15px;
+  font-style: italic;
 }
-/*fine regole footer*/
+/* end footer */
